# calpy

./: .gitignore  README.md  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: dev.yml
src/calpy/: calculators.py  cli.py
tests/: test_example.py  test_infix.py  test_postfix.py
