[metadata]
author = Jason Prasad
description = a calculator in Python
name = calpy
url = https://github.com/jjgp/calpy
version = 0.0.1

[flake8]
extend-ignore = E203,E402,W503
max-line-length = 88

[isort]
multi_line_output = 3
profile = black

[options]
install_requires =
    click>=8.0
packages =
    calpy
package_dir =
    =src
python_requires =
    >=3.10
setup_requires =
    setuptools

[options.entry_points]
console_scripts =
    calpy=calpy.cli:main

[options.extras_require]
dev =
    black>=22.3
    flake8>=4.0
    isort>=5.9
    pre-commit>=2.16
    pytest>=7.1
